Bug 1492288 - Use IGNORE_ROOT_SCROLL_FRAME on Android when doing the hit test in AccessibleCaretManager::SelectWordOrShortcut(). r=kats a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D6549